src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__duplicate_global_and_program.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: "&diagnostics"
---
error[E004]: prg: Ambiguous global variable.
  ┌─ <internal>:4:17
  │
4 │                 prg: INT;
  │                 ^^^ prg: Ambiguous global variable.
  ·
8 │             PROGRAM prg
  │                     --- see also

error[E004]: prg: Ambiguous global variable.
  ┌─ <internal>:8:21
  │
4 │                 prg: INT;
  │                 --- see also
  ·
8 │             PROGRAM prg
  │                     ^^^ prg: Ambiguous global variable.
